# raytracer-in-cpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: camera.hpp  dielectric.hpp  hit_record.hpp  hittable.hpp  hittable_list.hpp  lambertian.hpp  main.cpp  material.hpp  metal.hpp  ray.hpp  sphere.hpp  utils.cpp  utils.hpp  vec3.cpp  vec3.hpp
